--- a/website 1/style.css
+++ b/website 1/style.css
@@ -78,18 +78,55 @@ padding: 65px;
     padding: 40px;
     justify-content: center;
     align-items: flex-start;
-    gap:50px;
+    gap:90px;
 }
 
 .section2-div1{
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 60px;
     width: 530px;
 }
+
+.section2-div1,.section2-div2 h1{
+margin-bottom: 240px;
+}
+
 .section2-div2{
     display: flex;
     flex-direction: column;
     gap: 30px;
     width: 500px;
+    font-family: "IBM Plex Mono", monospace;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.footer-section{
+    background-color: #212121;
+    border: 2px solid #fff;
+    display: flex;
+    padding: 75px;
+    margin: 100px;
+    border-radius: 10px;
+}
+
+.footer-section div{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 50%;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.footer-section-div1 ul{
+display: flex;
+list-style: none;
+gap: 8px;
+}
+
+a {
+    text-decoration: underline;
+    color: #fff;
 }
